# Cortesian

./: .gitignore  CMakeLists.txt  README.md  clean_run.sh  doxygen_config  format.sh  main.cpp
demo/: mnist_demo.cpp  tiny_demo.cpp
docs/html/: _activation_8h_source.html  _adam_8h_source.html  _arg_max_8h_source.html  _back_prop_statistics_8h_source.html  _block_timer_8h_source.html  _categorical_cross_entropy_8h_source.html  _conv1d_8h_source.html  _conv2d_8h_source.html  _data_reader_8h_source.html  _data_split_8h_source.html  _default_network_factory_8h_source.html  _dense_8h_source.html  _eigen_initializer_8h_source.html  _evaluation_function_8h_source.html  _layer_8h_source.html  _leaky_relu_8h_source.html  _linear_function_8h_source.html  _loss_function_8h_source.html  _math_utils_8h_source.html  _mean_absolute_8h_source.html  _mean_squared_8h_source.html  _meta_base_8h_source.html  _network_8h_source.html  _network_builder_8h_source.html  _optimizer_8h_source.html  _parameter_initializer_8h_source.html  _sigmoid_function_8h_source.html  _softmax_8h_source.html  _stochastic_gradient_descent_8h_source.html  _tanh_8h_source.html  annotated.html  class_activation-members.html  class_activation.html  class_adam-members.html  class_adam.html  class_arg_max-members.html  class_arg_max.html  class_back_prop_statistics-members.html  class_back_prop_statistics.html  class_block_timer-members.html  (+73 more)
docs/html/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_b.js  all_c.html  all_c.js  all_d.html  all_d.js  classes_0.html  classes_0.js  classes_1.html  classes_1.js  classes_2.html  classes_2.js  classes_3.html  classes_3.js  classes_4.html  classes_4.js  classes_5.html  classes_5.js  (+24 more)
docs/latex/: annotated.tex  class_activation.eps  class_activation.tex  class_adam.eps  class_adam.tex  class_arg_max.eps  class_arg_max.tex  class_back_prop_statistics.tex  class_block_timer.tex  class_categorical_cross_entropy.eps  class_categorical_cross_entropy.tex  class_conv1_d.eps  class_conv1_d.tex  class_conv2_d.eps  class_conv2_d.tex  class_data_split.tex  class_dense.eps  class_dense.tex  class_eigen_initializer.eps  class_eigen_initializer.tex  class_evaluation_function.eps  class_evaluation_function.tex  class_layer.eps  class_layer.tex  class_leaky_relu.eps  class_leaky_relu.tex  class_linear_function.eps  class_linear_function.tex  class_loss_function.eps  class_loss_function.tex  class_mean_absolute.eps  class_mean_absolute.tex  class_mean_squared.eps  class_mean_squared.tex  class_meta_base.eps  class_meta_base.tex  class_network.eps  class_network.tex  class_network_builder.tex  class_optimizer.eps  (+16 more)
include/: ArgMaxEval.h  BlockTimer.h  DataReader.h  DefaultNetworkFactory.h  Layer.h  LossFunction.h  MathUtils.h  Network.h  NetworkBuilder.h  ParameterInitializer.h  Softmax.h  common.h
include/activations/: Activation.h  LeakyRelu.h  Linear.h  LinearFunction.h  Sigmoid.h  SigmoidFunction.h  Softmax.h  Tanh.h
include/initializers/: EigenInitializer.h  ParameterInitializer.h
include/layers/: Conv1d.h  Conv2d.h  Dense.h  Layer.h
include/loss_evals/: ArgMax.h  CategoricalCrossEntropy.h  EvaluationFunction.h  LogLoss.h  LossFunction.h  MeanAbsolute.h  MeanSquared.h
include/optimizers/: Adam.h  Optimizer.h  StochasticGradientDescent.h
include/utils/: ArgMax.h  BackPropStatistics.h  BlockTimer.h  DataReader.h  DataSplit.h  MathUtils.h  MetaBase.h  common.h
nn/: Activation.h  ArgMaxEval.cpp  ArgMaxEval.h  BackPropStatistics.cpp  BackPropStatistics.h  BlockTimer.cpp  BlockTimer.h  DataReader.h  DataSplit.cpp  DataSplit.h  EigenInitializer.cpp  EigenInitializer.h  EvaluationFunction.h  Layer.cpp  Layer.h  LeakyRelu.cpp  LeakyRelu.h  LinearFunction.cpp  LinearFunction.h  LossFunction.h  MathUtils.h  MeanAbsolute.cpp  MeanAbsolute.h  MeanSquared.cpp  MeanSquared.h  Network.cpp  Network.h  NetworkBuilder.h  Optimizer.h  ParameterInitializer.h  SigmoidFunction.cpp  SigmoidFunction.h  Softmax.cpp  Softmax.h  StochasticGradientDescent.cpp  StochasticGradientDescent.h  Tanh.cpp  Tanh.h  common.h
src/: Adam.cpp  ArgMaxEval.cpp  BackPropStatistics.cpp  BlockTimer.cpp  CategoricalCrossEntropy.cpp  DataSplit.cpp  EigenInitializer.cpp  Layer.cpp  LeakyRelu.cpp  LinearFunction.cpp  MeanAbsolute.cpp  MeanSquared.cpp  Network.cpp  SigmoidFunction.cpp  Softmax.cpp  StochasticGradientDescent.cpp  Tanh.cpp
src/activations/: LeakyRelu.cpp  Linear.cpp  LinearFunction.cpp  Sigmoid.cpp  SigmoidFunction.cpp  Softmax.cpp  Tanh.cpp
src/initializers/: EigenInitializer.cpp
src/layers/: Conv1d.cpp  Conv2d.cpp  Dense.cpp
src/loss_eval/: ArgMax.cpp  CategoricalCrossEntropy.cpp  LogLoss.cpp  LogLoss.h  MeanAbsolute.cpp  MeanSquared.cpp
src/loss_evals/: LogLoss.cpp  MeanSquared.cpp
src/optimizer/: Adam.cpp  StochasticGradientDescent.cpp
src/util/: BackPropStatistics.cpp  BlockTimer.cpp  DataSplit.cpp
tests/: test.cpp
